--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
+    <title>Dr. Md. Sherajul Islam - Nanomaterials Professor</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Dr. Md. Sherajul Islam</h1>
+        <h2>Nanomaterials Professor</h2>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -20,21 +22,30 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Welcome to my personal website! I am passionate about...</p>
+        <p>Welcome to my personal webpage! I am a nanomaterials professor in the Department of Electrical and Electronic Engineering at the Khulna university of Engineering & Technology where he has been a faculty member since 2007, with an expertise in computational materials engineering. He received his Ph.D. in Electrical Engineering from the University of Fukui in 2014. He is a recipient of Monbukagakshu(MEXT) scholarship by Japan Government and President’s International Fellowship Initiative (PIFI) Award. His research group focuses on  He has authored more than 100 peer-reviewed publications in esteemed journals and international conferences. He is a member of IEEE and IEB, and actively participates in journal paper and grant reviewing at the international level.</p>
     </section>
 
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <!-- Showcase your projects here -->
+    <section id="research">
+        <h2>Research</h2>
+        <p>My research focuses on the atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. His group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
+    </section>
+
+    <section id="publications">
+        <h2>Publications</h2>
+        <ul>
+            <li>Publication 1 - Title and details</li>
+            <li>Publication 2 - Title and details</li>
+            <!-- Add more publications here -->
+        </ul>
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to get in touch with me via email at <a href="mailto:your@email.com">your@email.com</a>.</p>
+        <p>Feel free to contact me via email at <a href="sheraj_kuet@eee.kuet.ac.bd">sheraj_kuet@eee.kuet.ac.bd</a>.</p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Dr. Md. Sherajul Islam</p>
     </footer>
 </body>
 </html>
