--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Welcome to my personal webpage! I am a nanomaterials professor in the Department of Electrical and Electronic Engineering at the Khulna university of Engineering & Technology where he has been a faculty member since 2007, with an expertise in computational materials engineering. He received his Ph.D. in Electrical Engineering from the University of Fukui in 2014. He is a recipient of Monbukagakshu(MEXT) scholarship by Japan Government and President’s International Fellowship Initiative (PIFI) Award. His research group focuses on  He has authored more than 100 peer-reviewed publications in esteemed journals and international conferences. He is a member of IEEE and IEB, and actively participates in journal paper and grant reviewing at the international level.</p>
+        <p>Welcome to my personal webpage! I am a professor in the Department of Electrical and Electronic Engineering at the Khulna university of Engineering & Technology where I have been a faculty member since 2007, with an expertise in computational materials engineering. I received my Ph.D. in Electrical Engineering from the University of Fukui in 2014. I'm a recipient of Monbukagakshu(MEXT) scholarship by Japan Government and President’s International Fellowship Initiative (PIFI) Award. I'm authored more than 100 peer-reviewed publications in esteemed journals and international conferences. I'm a member of IEEE and IEB, and actively participate in journal paper and grant reviewing at the international level.</p>
     </section>
 
     <section id="research">
         <h2>Research</h2>
-        <p>My research focuses on the atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. His group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
+        <p>My research focuses on the atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. My group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
     </section>
 
     <section id="publications">
