--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+j<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -69,7 +69,7 @@
         <form id="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" required>
-            <label for="email">Email:</label>
+            <label for="email">sheraj_kuet@eee.kuet.ac.bd</label>
             <input type="email" id="email" required>
             <label for="message">Message:</label>
             <textarea id="message" rows="4" required></textarea>
