--- a/index.html
+++ b/index.html
@@ -64,18 +64,10 @@ j<!DOCTYPE html>
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Feel free to reach out to me via the contact form below:</p>
-        <form id="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" required>
-            <label for="email">sheraj_kuet@eee.kuet.ac.bd</label>
-            <input type="email" id="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" rows="4" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
+    <h2>Contact</h2>
+    <p>Feel free to get in touch with me via email at <a href="sheraj_kuet@eee.kuet.ac.bd">sheraj_kuet@eee.kuet.ac.bd</a>.</p>
+</section>
+
 
     <footer>
         <p>&copy; 2023 Dr. Md. Sherajul Islam</p>
