--- a/index.html
+++ b/index.html
@@ -62,8 +62,26 @@ j<!DOCTYPE html>
             <!-- Publications will be dynamically added here using JavaScript -->
         </ul>
     </section>
+<!-- ... Previous HTML content ... -->
 
-    <section id="contact">
+<section id="supervision">
+    <h2>Student Supervision</h2>
+    <ul>
+        <li><strong>Ph.D. Students:</strong>
+            <ul>
+                <li>Abu Syed Md. Jannatul Islam - Graduated in 2021</li>
+                <li>Naim Ferdous - Ongoing</li>
+            </ul>
+        </li>
+        <li><strong>Master's Students:</strong>
+            <ul>
+                <li>Abu Syed Md. Jannatul Islam - Graduated in 2018</li>
+                <li>Md. Masud Rana - Graduated in 2018</li>
+            </ul>
+        </li>
+    </ul>
+</section>
+<section id="contact">
     <h2>Contact</h2>
     <p>Feel free to get in touch with me via email at <a href="sheraj_kuet@eee.kuet.ac.bd">sheraj_kuet@eee.kuet.ac.bd</a>.</p>
 </section>
