--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ j<!DOCTYPE html>
             <li><a href="#research">Research Interests</a></li>
             <li><a href="#highlights">Research Highlights</a></li>
             <li><a href="#publications">Publications</a></li>
-            <li><a href="#Research Project">Current Research Project</a></li>
+            <li><a href="#Research Project">Research Project</a></li>
              <li><a href="#Student Supervision">Student Supervision</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
