--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ j<!DOCTYPE html>
                 <li><strong>Date of Birth:</strong> October 13, 1983</li>
                 <li><strong>Nationality:</strong> Bangadeshi</li>
                 <li><strong>Civil Status:</strong> Married</li>
-                <li><strong>Degrees:</strong>B.Sc. Eng. in EEE (RUET 2007), M.Sc. Eng. in EEEE (KUET 2009)
-Ph.D. (Fukui Univ, Japan 2014), Post Doc. Fellowship (AFRL, USA 2022)</li>
+                <li><strong>Degrees:</strong>B.Sc. Eng. in EEE (RUET 2007), M.Sc. Eng. in EEE (KUET 2009)
+Ph.D. (Univirsity of Fukui, Japan 2014), Post Doc. (AFRL, USA 2022)</li>
                 <li><strong>Present Position:</strong> Professor, Khulna University of Engineering and Technology</li>
                 <li><strong>Additional Position:</strong> Editor, Nature  Scientific Reports</li>
                 <li><strong>Additional Experience:</strong> Research Faculty, University of Nevada, Reno, USA</li>
