--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ j<!DOCTYPE html>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <img src="C:\Users\Md Sherajul Islam\Desktop\SMN.jpg" alt="Your Name" id="profile-picture">
     <header>
         <h1>Dr. Md. Sherajul Islam</h1>
         <h2>Nanomaterials Professor</h2>
