--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ j<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Md. Sherajul Islam - Nanomaterials Professor</title>
+    <title>Computational Nanomaterials Laboratory - Principal Investigator: Md. Sherajul Islam</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
