--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ j<!DOCTYPE html>
 </head>
 <body>
         <header>
-        <h1>Dr. Md. Sherajul Islam</h1>
-        <h2>Nanomaterials Professor</h2>
+        <h1>Computational Nanomaterials Laboratory</h1>
+        <h2>Principal Investigator@Md. Sherajul Islam</h2>
         <img id="profile-picture" src="SMN.jpg" alt="Your Name">
     </header>
 
