--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
             color: #fff;
             padding: 20px;
             text-align: center;
-            position: relative;
+            display: flex; /* Use flexbox for header layout */
+            justify-content: space-between; /* Put space between logo and text */
+            align-items: center; /* Vertically align items */
         }
 
         header .logo {
-            position: absolute;
-            top: 20px; /* Adjust top position as needed */
-            right: 20px; /* Adjust right position as needed */
             max-width: 100px;
         }
 
@@ -69,7 +68,7 @@
 <body>
     <header>
         <img src="SMN.jpg" alt="Nanomaterials Lab Logo" class="logo"> <!-- Add your logo image here -->
-        <h1>Compuatational Nanomaterials Laboratory</h1>
+        <h1>Nanomaterials Laboratory</h1>
     </header>
     <nav>
         <ul>
