--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="content" id="research">
         <h2>Research</h2>
         <p>Describe the research activities of your laboratory in this section.</p>
-        <img src="research.jpg" alt="Research Image" class="publication-image"> <!-- Add research image -->
+        <img src="researc.jpg" alt="Research Image" class="publication-image"> <!-- Add research image -->
         <!-- Add research information here -->
     </div>
     <div class="content" id="team">
