--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <p>Title: Research Paper 1<br>Authors: John Doe, Jane Smith<br>Date: January 2023</p>
         </div>
         <div class="publication">
-            <img src="publication-2.jpg" alt="Publication 2" class="publication-image">
+            <img src="publication-2.png" alt="Publication 2" class="publication-image">
             <p>Title: Research Paper 2<br>Authors: Jane Smith, Mary Johnson<br>Date: February 2023</p>
         </div>
         <!-- Add more publications as needed -->
