--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
         <!-- Add publication information with images -->
         <div class="publication">
             <img src="publication-1.jpg" alt="Publication 1" class="publication-image">
-            <p>Title: Research Paper 1<br>Authors: John Doe, Jane Smith<br>Date: January 2023</p>
+            <p>Title: Research Paper 1<br>Authors: Y. zamil eta al.<br>Date: January 2023</p>
         </div>
         <div class="publication">
-            <img src="publication-2.png" alt="Publication 2" class="publication-image">
-            <p>Title: Research Paper 2<br>Authors: Jane Smith, Mary Johnson<br>Date: February 2023</p>
+            <img src="publication-2.jpg" alt="Publication 2" class="publication-image">
+            <p>Title: Research Paper 2<br>Authors: N. Ferdous et al.<br>Date: February 2023</p>
         </div>
         <!-- Add more publications as needed -->
     </div>
