--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="content" id="contact">
         <h2>Contact Us</h2>
         <p>For inquiries and collaborations, please contact us at:</p>
-        <p>Email: <a href="sheraj_kuet@eee.kuet.ac.bd">csheraj_kuet@eee.kuet.ac.bd</a></p>
+        <p>Email: <a href="sheraj_kuet@eee.kuet.ac.bd">sheraj_kuet@eee.kuet.ac.bd</a></p>
     </div>
 
     <script>
