--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
         header .logo {
             max-width: 100px;
+            position: absolute; /* Position the logo absolutely */
+            top: 10px; /* Adjust top position as needed */
+            right: 10px; /* Adjust right position as needed */
         }
 
         nav {
