--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             display: flex; /* Use flexbox for header layout */
             justify-content: space-between; /* Put space between logo and text */
             align-items: center; /* Vertically align items */
+            position: relative;
         }
 
         header .logo {
