--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             color: #fff;
             padding: 20px;
             text-align: center;
-            display: flex; /* Use flexbox for header layout */
-            justify-content: space-between; /* Put space between logo and text */
-            align-items: center; /* Vertically align items */
             position: relative;
         }
 
         header .logo {
-            max-width: 100px;
             position: absolute; /* Position the logo absolutely */
             top: 10px; /* Adjust top position as needed */
             right: 10px; /* Adjust right position as needed */
+            max-width: 100px;
+        }
+        header h1 {
+            margin: 0; /* Remove default margin for h1 */
         }
 
         nav {
