--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             padding: 20px;
             text-align: center;
             position: relative;
+            margin-bottom: 0;
         }
 
         header .logo {
