--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
+            margin-top: 0;
         }
 
         nav ul {
