--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
         <h2>Contact Us</h2>
         <p>For inquiries and collaborations, please contact us at:</p>
         <p>Email: <a href="sheraj_kuet@eee.kuet.ac.bd">sheraj_kuet@eee.kuet.ac.bd</a></p>
-    </div>
-
-    <script>
-        // JavaScript function to show/hide sections
-        function showSection(sectionId) {
-            // Hide all sections
-            var sections
+      </div>
+    <!-- Other content sections go here -->
+    <script src="script.js"></script> <!-- Link to the JavaScript file -->
+</body>
+</html>
