--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computational Nanomaterials Laboratory</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to the CSS file -->
-    
 </head>
 <body>
     <header>
         <h1>Computational Nanomaterials Laboratory</h1>
-        <img src="SMN.png" alt="Nanomaterials Lab Logo" class="logo"> <!-- Add your logo image here -->
+        <img src="SMN.jpg" alt="Nanomaterials Lab Logo" class="logo"> <!-- Add your logo image here -->
     </header>
     <nav>
         <ul>
@@ -34,7 +33,7 @@
     </div>
     <div class="content" id="team">
         <h2>Our Team</h2>
-        <p>Introduce the members of your laboratory and their roles.</p>
+        <p> Members of our laboratory and their roles.</p>
         <!-- Add team member information with images -->
         <div class="team-member">
             <img src="SMN.jpg" alt="Team Member 1" class="team-member-image">
