--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="content" id="team">
         <h2>Our Team</h2>
-        <p> Members of our laboratory and their roles.</p>
+        <p> </p>
         <!-- Add team member information with images -->
         <div class="team-member">
             <img src="SMN.jpg" alt="Team Member 1" class="team-member-image">
@@ -50,14 +50,24 @@
         <p>List your laboratory's publications and research papers here.</p>
         <!-- Add publication information with images -->
         <div class="publication">
-            <img src="publication-1.jpg" alt="Publication 1" class="publication-image">
-            <p>Title: Research Paper 1<br>Authors: John Doe, Jane Smith<br>Date: January 2023</p>
+            <img src="publication-3.jpg" alt="Publication 1" class="publication-image">
+            <p>Title: Research Paper 1<br>Authors: Md. Sherajul Islam et al.<br>Date: July 2023</p>
         </div>
         <div class="publication">
-            <img src="publication-2.jpg" alt="Publication 2" class="publication-image">
-            <p>Title: Research Paper 2<br>Authors: Jane Smith, Mary Johnson<br>Date: February 2023</p>
+            <img src="publication-1.jpg" alt="Publication 2" class="publication-image">
+            <p>Title: Research Paper 2<br>Authors: Y. Zamil and Md. Sherajul Islam et al. <br>Date: May 2022</p>
         </div>
-        <!-- Add more publications as needed -->
+        <div class="publication">
+            <img src="publication-4.jpg" alt="Publication 2" class="publication-image">
+            <p>Title: Research Paper 2<br>Authors: M. R. Islam and Md. Sherajul Islam et al. <br>Date: September 2021</p>
+    </div>
+        <div class="publication">
+            <img src="publication-5.jpg" alt="Publication 2" class="publication-image">
+            <p>Title: Research Paper 2<br>Authors: Md. Sherajul Islam et al. <br>Date: December 2020</p>
+    </div>
+        <div class="publication">
+            <img src="publication-2.jpg" alt="Publication 2" class="publication-image">
+            <p>Title: Research Paper 2<br>Authors: N. Ferdous and Md. Sherajul Islam et al. <br>Date: December 2019</p>
     </div>
     <div class="content" id="contact">
         <h2>Contact Us</h2>
