--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="content" id="home">
         <img src="home.jpg" alt="Home Page Image" class="home-image"> <!-- Add your home page image here -->
         <h2>Welcome to Computational Nanomaterials Laboratory</h2>
-        <p>This is the home section. Here you can provide a brief introduction to your laboratory.</p>
+        <p>Update coming soon</p>
     </div>
     <div class="content" id="research">
         <h2>Research</h2>
-        <p>Describe the research activities of your laboratory in this section.</p>
+        <p>Update coming soon</p>
         <img src="researc.jpg" alt="Research Image" class="publication-image"> <!-- Add research image -->
         <!-- Add research information here -->
     </div>
@@ -58,15 +58,15 @@
             <p>Title: Research Paper 2<br>Authors: Y. Zamil and Md. Sherajul Islam et al. <br>Date: May 2022</p>
         </div>
         <div class="publication">
-            <img src="publication-4.jpg" alt="Publication 2" class="publication-image">
+            <img src="publication-4.jpg" alt="Publication 3" class="publication-image">
             <p>Title: Research Paper 2<br>Authors: M. R. Islam and Md. Sherajul Islam et al. <br>Date: September 2021</p>
     </div>
         <div class="publication">
-            <img src="publication-5.jpg" alt="Publication 2" class="publication-image">
+            <img src="publication-5.jpg" alt="Publication 4" class="publication-image">
             <p>Title: Research Paper 2<br>Authors: Md. Sherajul Islam et al. <br>Date: December 2020</p>
     </div>
         <div class="publication">
-            <img src="publication-2.jpg" alt="Publication 2" class="publication-image">
+            <img src="publication-2.jpg" alt="Publication 5" class="publication-image">
             <p>Title: Research Paper 2<br>Authors: N. Ferdous and Md. Sherajul Islam et al. <br>Date: December 2019</p>
     </div>
     <div class="content" id="contact">
