--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="content" id="publications">
         <h2>Publications</h2>
-        <p>List your laboratory's publications and research papers here.</p>
+        <p>Most Recent publications from our lab.</p>
         <!-- Add publication information with images -->
         <div class="publication">
             <img src="publication-3.jpg" alt="Publication 1" class="publication-image">
