--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="content" id="publications">
         <h2>Publications</h2>
-        <p>Most Recent publications from our lab.</p>
+        <p>Most recent publications from our lab.</p>
         <!-- Add publication information with images -->
         <div class="publication">
             <img src="publication-3.jpg" alt="Publication 1" class="publication-image">
@@ -69,6 +69,7 @@
             <img src="publication-2.jpg" alt="Publication 5" class="publication-image">
             <p>Title: Research Paper 2<br>Authors: N. Ferdous and Md. Sherajul Islam et al. <br>Date: December 2019</p>
     </div>
+        </div>
     <div class="content" id="contact">
         <h2>Contact Us</h2>
         <p>For inquiries and collaborations, please contact us at:</p>
