--- a/index.html
+++ b/index.html
@@ -59,22 +59,23 @@
         </div>
         <div class="publication">
             <img src="publication-4.jpg" alt="Publication 3" class="publication-image">
-            <p>Title: Research Paper 2<br>Authors: M. R. Islam and Md. Sherajul Islam et al. <br>Date: September 2021</p>
+            <p>Title: Research Paper 3<br>Authors: M. R. Islam and Md. Sherajul Islam et al. <br>Date: September 2021</p>
     </div>
         <div class="publication">
             <img src="publication-5.jpg" alt="Publication 4" class="publication-image">
-            <p>Title: Research Paper 2<br>Authors: Md. Sherajul Islam et al. <br>Date: December 2020</p>
+            <p>Title: Research Paper 4<br>Authors: Md. Sherajul Islam et al. <br>Date: December 2020</p>
     </div>
         <div class="publication">
             <img src="publication-2.jpg" alt="Publication 5" class="publication-image">
-            <p>Title: Research Paper 2<br>Authors: N. Ferdous and Md. Sherajul Islam et al. <br>Date: December 2019</p>
+            <p>Title: Research Paper 5<br>Authors: N. Ferdous and Md. Sherajul Islam et al. <br>Date: December 2019</p>
     </div>
-        </div>
+        <!-- Add more publications as needed -->
+    </div>
     <div class="content" id="contact">
         <h2>Contact Us</h2>
         <p>For inquiries and collaborations, please contact us at:</p>
         <p>Email: <a href="sheraj_kuet@eee.kuet.ac.bd">sheraj_kuet@eee.kuet.ac.bd</a></p>
-      </div>
+    </div>
     <!-- Other content sections go here -->
     <script src="script.js"></script> <!-- Link to the JavaScript file -->
 </body>
