--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
             <img src="syed.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Student</p>
         </div>
+        div class="team-member">
+            <img src="ah.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Ashraful Hossain Howlader<br>Role: Graduated</p>
+        </div>
+        <div class="team-member">
+            <img src="rony.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Md. Rasidul Islam<br>Role: Graduated</p>
+        </div>
         <!-- Add more team members as needed -->
     </div>
     <div class="content" id="publications">
