--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="syed.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Student</p>
         </div>
-        div class="team-member">
+        <div class="team-member">
             <img src="ah.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Ashraful Hossain Howlader<br>Role: Graduated</p>
         </div>
