--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
             <img src="rony.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Md. Rasidul Islam<br>Role: Graduated</p>
         </div>
+        <div class="team-member">
+            <img src="masud.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Md. Masud Rana<br>Role: Graduated</p>
+        </div>
+        <div class="team-member">
+            <img src="m2.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Md. Masud Rana<br>Role: Graduated</p>
+        </div>
         <!-- Add more team members as needed -->
     </div>
     <div class="content" id="publications">
