--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
         <div class="team-member">
             <img src="m2.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Md. Masud Rana<br>Role: Graduated</p>
+         <div class="team-member">
+            <img src="naim.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Naim Ferdous<br>Role: Graduated</p>
+        </div>   
+        <div class="team-member">
+            <img src="shihab.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Shihab Ahammed<br>Role: Graduated</p>
+        </div>
+            <div class="team-member">
+            <img src="shifa.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Shifa Khatun<br>Role: Graduated</p>
+        </div>   
         </div>
         <!-- Add more team members as needed -->
     </div>
