--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>Name: Shihab Ahammed<br>Role: Graduated</p>
         </div>
             <div class="team-member">
-            <img src="shifa.jpg" alt="Team Member 2" class="team-member-image">
+            <img src="naim.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Shifa Khatun<br>Role: Graduated</p>
         </div>   
         </div>
